bk_ida/gccida/g1/memory_address_length
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address_length/src/i386.c:10337:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 9877, "memory_address_length"); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address_length/src/obj/i386.o] Error 1
